Update FileTreeGen and Documentation

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 #* Ignorar Archivos innecesarios (FileTreeGen)
 /tool/src/FileTreeGen/bin/AllowedExtensions.txt
 /tool/src/FileTreeGen/bin/output.md
+/tool/src/FileTreeGen/bin/*.tmp
+/tool/src/FileTreeGen/*.tmp
 
 #; Ignorar archivos de logs
 logs
