--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /data
 
 #* Ignorar Archivos innecesarios (FileTreeGen)
-/tool/src/FileTreeGen/bin/AllowedExtensions.txt
+/tool/src/FileTreeGen/bin/FilesContents.conf
 /tool/src/FileTreeGen/bin/output.md
 /tool/src/FileTreeGen/bin/*.tmp
 /tool/src/FileTreeGen/*.tmp
