En desarollo FileTreeGen.conf y funcionalidades

--- a/tool/src/FileTreeGen/FileTreeGen.conf
+++ b/tool/src/FileTreeGen/FileTreeGen.conf
@@ -58,23 +58,9 @@ allowed_extensions = [
 ]
 
 #! Tetst Array
-# Array_de_ejemplo = [ '' ," ","1","2"
-
-# # "",,'3',']',"]","4",'5',
-# "",,'3', ,"4",'5',
-# "5", "5","1","10","10","20","10","8","20"]
-
 ##? Carpetas y Archivos Ignorados
 
 ###* Carpeta `node_modules`
-#1/ (Prioridad 1º) fn: analyzeConfigFile
-#;⛔
-# node_modules
-# .\node_modules
-# \node_modules
-# node_modules\.
-# node_modules\
-
 ignored_files = [
 "node_modules",
 
@@ -88,7 +74,7 @@ ignored_files = [
 ]
 
 ###* Archivos dentro de `node_modules`
-#3/ (Prioridad 3º)
+#! En Desarrollo (Incompatible)
 #;⛔
 # node_modules\*
 # node_modules\*.js
