Update En desarollo FileTreeGen.conf y funcionalidades

--- a/tool/src/FileTreeGen/FileTreeGen.conf
+++ b/tool/src/FileTreeGen/FileTreeGen.conf
@@ -63,14 +63,16 @@ allowed_extensions = [
 ###* Carpeta `node_modules`
 ignored_files = [
 "node_modules",
+"1\d\d.js",
+"1/b"
 
-"node_modules/",
-"node_modules/.",
-"node_modules/..",
+# "node_modules/",
+# "node_modules/.",
+# "node_modules/..",
 
-"/node_modules",
-"./node_modules",
-"../node_modules",
+# "/node_modules",
+# "./node_modules",
+# "../node_modules",
 ]
 
 ###* Archivos dentro de `node_modules`
