Update FileTreeGen v2.0 and Documentation

--- a/tool/src/FileTreeGen/FileTreeGen.conf
+++ b/tool/src/FileTreeGen/FileTreeGen.conf
@@ -2,18 +2,27 @@
 
 ##? ♦ Extensiones de Archivos Permitidas
 #; Define las extensiones de archivo permitidas para el procesamiento.
-#; Cada línea debe contener una extensión sin el punto inicial.
-#; Se ignoran las líneas que comienzan con "#" y las que contienen un "." (indicando archivos completos).
+#; Cada línea dentro de los arrays debe contener una extensión sin el punto inicial.
+#; Se ignoran las líneas que comienzan con "#".
 
 ##? ♦ Carpetas y Archivos Ignorados (NO Usar Patrones De Coincidencia)
 #; Define los archivos completos que deben ser ignorados durante el procesamiento.
-#; Cada línea debe contener la ruta completa del archivo junto con su extensión.
+#; Cada línea dentro de los arrays debe contener la ruta completa del archivo junto con su extensión.
 #; Se pueden usar rutas absolutas y relativas.
-#; No se pueden usar patrones de búsqueda o de coincidencia de archivos.
+#; No se pueden usar patrones de búsqueda o de coincidencia de archivos como `?` o `*`.
 #; Se ignoran las líneas que comienzan con "#".
 
+#? ♦ Sintaxis de los Arrays
+#; Los datos deben estar contenidos en arrays.
+#; No debe haber información fuera de los arrays a no ser que sean comentarios.
+#; Todas las secciones heredan los datos de la sección "AllDefault".
+#; Cada sección puede tener sus propias configuraciones de datos.
+#; Si se añaden datos a "AllDefault", se valoran en todas las demás secciones.
+#; Las secciones pueden estar vacías pero al menos debe de haber alguna extensión permitida en "AllDefault".
+#; Si no hay extensiones permitidas, no se leerá ningún archivo.
+
 ############################################################
-#todo--- In All Default Sections
+#todo: In All Default Sections
 #^ Configuraciones predeterminadas heredadas por las demás secciones.
 [AllDefault]
 
@@ -21,75 +30,31 @@
 allowed_extensions = [
 
 ###* Extensiones de Archivos de Texto
-"txt",
-"md",
-"csv",
-"log",
-"ini",
-"rtf",
-"tex",
+"txt","md","csv","log","ini","rtf","tex",
 
 ###* Extensiones de Lenguajes de Programación
-"ahk",
-"ah2",
-"py",
-"java",
-"cpp",
-"js",
-"ts",
-"html",
-"css",
-"json",
-"xml",
-"rb",
-"php",
-"sh",
-"bat",
-"ps1",
+"ahk","ah2","py","java","cpp","js","ts","html",
+"css","json","xml","rb","php","sh","bat","ps1",
 "sql",
 
 ###* Extensiones de Archivos de Configuración y Otros
-"conf",
-"cfg",
-"toml",
-"yaml",
-"yml",
-"properties",
+"conf","cfg","toml","yaml","yml","properties",
 ]
 
-#! Tetst Array
 ##? Carpetas y Archivos Ignorados
-
-###* Carpeta `node_modules`
 ignored_files = [
+###* Carpeta `node_modules`
 "node_modules",
-"1\d\d.js",
-"1/b"
 
-# "node_modules/",
-# "node_modules/.",
-# "node_modules/..",
-
-# "/node_modules",
-# "./node_modules",
-# "../node_modules",
-]
-
-###* Archivos dentro de `node_modules`
-#! En Desarrollo (Incompatible)
+#! En Desarrollo (Patrones Incompatibles)
 #;⛔
-# node_modules\*
-# node_modules\*.js
+# "node_modules\??.*",
+# "node_modules\*.js",
+]
 
 ############################################################
 
-#2/ (Prioridad 2º) fn: generateFilesContents
-#! (En desarollo)
-#! Idea 1
-#! Si no existe un comando para obtener un tree solo con los archivos deseados.
-#! Hacer una copia condicional con los archivos permitidos he ignorados y hacer tree ha esa copia y luego eliminarla.
-
-#todo--- Directory Tree section
+#todo: Directory Tree section
 #^ Configuraciones específicas para la estructura del árbol de directorios.
 [DirectoryTree]
 
@@ -99,11 +64,13 @@ allowed_extensions = [
 ]
 
 ##? Carpetas y Archivos Ignorados
+ignored_files = [
 #; Heredadas de AllDefault
+]
 
 ############################################################
 
-#todo--- Files Contents section
+#todo: Files Contents section
 #^ Configuraciones específicas para el contenido de archivos.
 [FilesContents]
 
@@ -115,7 +82,7 @@ allowed_extensions = [
 ##? Carpetas y Archivos Ignorados
 ignored_files = [
 ###* Archivo de Salida Combinado
-# "output.md",
+"output.md",
 ]
 
 ############################################################
