--- a/tool/src/FileTreeGen/FileTreeGen.conf
+++ b/tool/src/FileTreeGen/FileTreeGen.conf
@@ -45,6 +45,7 @@ allowed_extensions = [
 ignored_files = [
 ###* Carpeta `node_modules`
 "node_modules",
+".git",
 
 #! En Desarrollo (Patrones Incompatibles)
 #;⛔
