--- a/tool/src/FileTreeGen/FileTreeGen.conf
+++ b/tool/src/FileTreeGen/FileTreeGen.conf
@@ -5,11 +5,11 @@
 #; Cada línea dentro de los arrays debe contener una extensión sin el punto inicial.
 #; Se ignoran las líneas que comienzan con "#".
 
-##? ♦ Carpetas y Archivos Ignorados (NO Usar Patrones De Coincidencia)
-#; Define los archivos completos que deben ser ignorados durante el procesamiento.
-#; Cada línea dentro de los arrays debe contener la ruta completa del archivo junto con su extensión.
+##? ♦ Carpetas y Archivos Ignorados
+#; Define los archivos y carpetas que deben ser ignorados durante el procesamiento.
+#; Cada línea dentro de los arrays debe contener la ruta completa del archivo junto con su extensión, o usar patrones de coincidencia.
 #; Se pueden usar rutas absolutas y relativas.
-#; No se pueden usar patrones de búsqueda o de coincidencia de archivos como `?` o `*`.
+#; Se pueden usar patrones de búsqueda o de coincidencia de archivos como `?` o `*`.
 #; Se ignoran las líneas que comienzan con "#".
 
 #? ♦ Sintaxis de los Arrays
@@ -46,11 +46,6 @@ ignored_files = [
 ###* Carpeta `node_modules`
 "node_modules",
 ".git",
-
-#! En Desarrollo (Patrones Incompatibles)
-#;⛔
-# "node_modules\??.*",
-# "node_modules\*.js",
 ]
 
 ############################################################
@@ -82,8 +77,8 @@ allowed_extensions = [
 
 ##? Carpetas y Archivos Ignorados
 ignored_files = [
-###* Archivo de Salida Combinado
-"output.md",
+#* Ejemplo ignorar todos los archivos MarkDown (Recursivo)
+"*.md",
 ]
 
 ############################################################
